refactor(report): Renamed ping to health
